k8s/apps/angular-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angularapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angularapp
  template:
    metadata:
      labels:
        app: angularapp
    spec:
      containers:
        - name: angular-app-container
          image: tejassrivathsa/fow-app-ui:14
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  selector:
    app: angularapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
