k8s/apps/menu-directory-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menudirectoryapp
  labels:
    app: menudirectoryapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: menudirectoryapp
  template:
    metadata:
      labels:
        app: menudirectoryapp
    spec:
      containers:
        - name: menudirectoryapp
          image: tejassrivathsa/menu-directory-service:19
          imagePullPolicy: Always
          ports:
            - containerPort: 9092
---

apiVersion: v1
kind: Service
metadata:
  name: menu-directory-service
spec:
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
  selector:
    app: menudirectoryapp
