k8s/apps/restaurant-listing-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurantlistingapp
  labels:
    app: restaurantlistingapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurantlistingapp
  template:
    metadata:
      labels:
        app: restaurantlistingapp
    spec:
      containers:
        - name: restaurantlistingapp
          image: tejassrivathsa/restaurant-listing-service:77
          imagePullPolicy: Always
          ports:
            - containerPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-listing-service
spec:
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
  selector:
    app: restaurantlistingapp
