k8s/apps/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 80

          - path: /restaurant
            pathType: Prefix
            backend:
              service:
                name: restaurant-listing-service
                port:
                  number: 9091

          - path: /foodCatalogue
            pathType: Prefix
            backend:
              service:
                name: menu-directory-service
                port:
                  number: 9092

          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-details-service
                port:
                  number: 9093

          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 9094
